--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
         "laravel/jetstream": "^2.16",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.11"
+        "livewire/livewire": "^2.11",
+        "spatie/laravel-collection-macros": "^7.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "josezenem/laravel-make-migration-pivot": "^1.0",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
