--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "josezenem/laravel-make-migration-pivot": "^1.0",
+        "laravel-lang/attributes": "^2.1",
+        "laravel-lang/lang": "^12.16",
+        "laravel-lang/publisher": "^14.6",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
