--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.11",
         "spatie/laravel-collection-macros": "^7.12",
+        "spatie/laravel-permission": "^5.9",
         "wire-elements/modal": "^1.0"
     },
     "require-dev": {
