--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,13 @@
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.11",
         "maatwebsite/excel": "^3.1",
-        "mediconesystems/livewire-datatables": "^0.10.0",
+        "rappasoft/laravel-livewire-tables": "^2.13",
         "spatie/laravel-collection-macros": "^7.12",
         "spatie/laravel-permission": "^5.9",
         "wire-elements/modal": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "fakerphp/faker": "^1.9.1",
         "josezenem/laravel-make-migration-pivot": "^1.0",
         "laravel-lang/attributes": "^2.1",
@@ -38,7 +39,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "helpers/CommonHelper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
