--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "arielmejiadev/larapex-charts": "^8.1",
         "clickbar/laravel-magellan": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
         "jantinnerezo/livewire-alert": "^2.2",
@@ -13,6 +14,7 @@
         "laravel/jetstream": "^2.16",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laraveldaily/laravel-charts": "^0.2.3",
         "livewire/livewire": "^2.11",
         "maatwebsite/excel": "^3.1",
         "phayes/geophp": "^1.2",
