gestione viaggi come layer diversi

--- a/resources/lizmap/qgis/provinciale/provinciale.qgs.cfg
+++ b/resources/lizmap/qgis/provinciale/provinciale.qgs.cfg
@@ -1,14 +1,17 @@
 {
     "metadata": {
         "qgis_desktop_version": 32801,
-        "lizmap_plugin_version_str": "4.2.1",
-        "lizmap_plugin_version": 40201,
+        "lizmap_plugin_version_str": "4.2.7",
+        "lizmap_plugin_version": 40207,
         "lizmap_web_client_target_version": 30600,
         "lizmap_web_client_target_status": "Stable",
         "instance_target_url": "http://10.0.16.23:8000/",
         "instance_target_repository": "provinciale"
     },
     "warnings": {},
+    "debug": {
+        "total_time": 2.839
+    },
     "options": {
         "projection": {
             "proj4": "+proj=utm +zone=32 +datum=WGS84 +units=m +no_defs",
@@ -124,25 +127,127 @@
             "cached": "False",
             "clientCacheExpiration": 300
         },
-        "Percorso": {
+        "Auto": {
             "id": "viaggi_lizmap_64ff4c8b_02ba_42a9_9ed3_3a4ed93996c1",
-            "name": "Percorso",
+            "name": "Auto",
             "type": "layer",
             "geometryType": "line",
             "extent": [
                 546300.1272999998,
-                4967184.330103489,
+                4982093.655145671,
                 570066.9552999997,
                 4991872.26184783
             ],
             "crs": "EPSG:32632",
-            "title": "Percorso",
+            "title": "Auto",
             "abstract": "",
             "link": "",
             "minScale": 1,
             "maxScale": 1000000000000,
-            "toggled": "True",
-            "popup": "True",
+            "toggled": "False",
+            "popup": "False",
+            "popupSource": "auto",
+            "popupTemplate": "",
+            "popupMaxFeatures": 10,
+            "popupDisplayChildren": "False",
+            "popup_allow_download": true,
+            "legend_image_option": "hide_at_startup",
+            "groupAsLayer": "False",
+            "baseLayer": "False",
+            "displayInLegend": "True",
+            "group_visibility": [],
+            "singleTile": "True",
+            "imageFormat": "image/png",
+            "cached": "False",
+            "clientCacheExpiration": 300
+        },
+        "Bicicletta": {
+            "id": "Percorso_537bdde0_dd27_4221_853b_31a268273b77",
+            "name": "Bicicletta",
+            "type": "layer",
+            "geometryType": "line",
+            "extent": [
+                548497.7737999996,
+                4982093.655145671,
+                570066.9552999997,
+                4989853.635347397
+            ],
+            "crs": "EPSG:32632",
+            "title": "Bicicletta",
+            "abstract": "",
+            "link": "",
+            "minScale": 1,
+            "maxScale": 1000000000000,
+            "toggled": "False",
+            "popup": "False",
+            "popupSource": "auto",
+            "popupTemplate": "",
+            "popupMaxFeatures": 10,
+            "popupDisplayChildren": "False",
+            "popup_allow_download": true,
+            "legend_image_option": "hide_at_startup",
+            "groupAsLayer": "False",
+            "baseLayer": "False",
+            "displayInLegend": "True",
+            "group_visibility": [],
+            "singleTile": "True",
+            "imageFormat": "image/png",
+            "cached": "False",
+            "clientCacheExpiration": 300
+        },
+        "Piedi": {
+            "id": "Percorso_79e26d45_1524_4d48_a1c5_3e32c1de52ac",
+            "name": "Piedi",
+            "type": "layer",
+            "geometryType": "line",
+            "extent": [
+                550688.2016043968,
+                4968839.442532265,
+                556319.7651543709,
+                4989553.98908338
+            ],
+            "crs": "EPSG:32632",
+            "title": "Piedi",
+            "abstract": "",
+            "link": "",
+            "minScale": 1,
+            "maxScale": 1000000000000,
+            "toggled": "False",
+            "popup": "False",
+            "popupSource": "auto",
+            "popupTemplate": "",
+            "popupMaxFeatures": 10,
+            "popupDisplayChildren": "False",
+            "popup_allow_download": true,
+            "legend_image_option": "hide_at_startup",
+            "groupAsLayer": "False",
+            "baseLayer": "False",
+            "displayInLegend": "True",
+            "group_visibility": [],
+            "singleTile": "True",
+            "imageFormat": "image/png",
+            "cached": "False",
+            "clientCacheExpiration": 300
+        },
+        "Bus Comunale": {
+            "id": "Percorso_9048b3b0_2bf6_4b06_ad77_8c189a1eaf9e",
+            "name": "Bus Comunale",
+            "type": "layer",
+            "geometryType": "line",
+            "extent": [
+                547050.1485472092,
+                4967184.330103489,
+                557282.7402450192,
+                4989711.812658156
+            ],
+            "crs": "EPSG:32632",
+            "title": "Bus Comunale",
+            "abstract": "",
+            "link": "",
+            "minScale": 1,
+            "maxScale": 1000000000000,
+            "toggled": "False",
+            "popup": "False",
             "popupSource": "auto",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
