--- a/resources/lizmap/qgis/scolastico/scolastico.qgs.cfg
+++ b/resources/lizmap/qgis/scolastico/scolastico.qgs.cfg
@@ -10,7 +10,7 @@
     },
     "warnings": {},
     "debug": {
-        "total_time": 3.4609999999999994
+        "total_time": 3.1179999999999994
     },
     "options": {
         "projection": {
@@ -78,7 +78,7 @@
             "maxScale": 1000000000000,
             "toggled": "True",
             "popup": "True",
-            "popupSource": "auto",
+            "popupSource": "qgis",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
             "popupDisplayChildren": "False",
@@ -112,7 +112,7 @@
             "maxScale": 1000000000000,
             "toggled": "True",
             "popup": "True",
-            "popupSource": "auto",
+            "popupSource": "qgis",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
             "popupDisplayChildren": "False",
@@ -144,9 +144,9 @@
             "link": "",
             "minScale": 1,
             "maxScale": 1000000000000,
-            "toggled": "False",
-            "popup": "False",
-            "popupSource": "auto",
+            "toggled": "True",
+            "popup": "True",
+            "popupSource": "qgis",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
             "popupDisplayChildren": "False",
@@ -178,9 +178,9 @@
             "link": "",
             "minScale": 1,
             "maxScale": 1000000000000,
-            "toggled": "False",
-            "popup": "False",
-            "popupSource": "auto",
+            "toggled": "True",
+            "popup": "True",
+            "popupSource": "qgis",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
             "popupDisplayChildren": "False",
@@ -212,9 +212,9 @@
             "link": "",
             "minScale": 1,
             "maxScale": 1000000000000,
-            "toggled": "False",
-            "popup": "False",
-            "popupSource": "auto",
+            "toggled": "True",
+            "popup": "True",
+            "popupSource": "qgis",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
             "popupDisplayChildren": "False",
@@ -246,9 +246,9 @@
             "link": "",
             "minScale": 1,
             "maxScale": 1000000000000,
-            "toggled": "False",
-            "popup": "False",
-            "popupSource": "auto",
+            "toggled": "True",
+            "popup": "True",
+            "popupSource": "qgis",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
             "popupDisplayChildren": "False",
