--- a/resources/lizmap/qgis/provinciale/provinciale.qgs.cfg
+++ b/resources/lizmap/qgis/provinciale/provinciale.qgs.cfg
@@ -10,7 +10,7 @@
     },
     "warnings": {},
     "debug": {
-        "total_time": 2.839
+        "total_time": 3.351
     },
     "options": {
         "projection": {
@@ -72,13 +72,13 @@
             ],
             "crs": "EPSG:32632",
             "title": "Studente",
-            "abstract": "",
+            "abstract": "<p>testtttttt</p>",
             "link": "",
             "minScale": 1,
             "maxScale": 1000000000000,
             "toggled": "True",
             "popup": "True",
-            "popupSource": "auto",
+            "popupSource": "qgis",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
             "popupDisplayChildren": "False",
@@ -112,7 +112,7 @@
             "maxScale": 1000000000000,
             "toggled": "True",
             "popup": "True",
-            "popupSource": "auto",
+            "popupSource": "qgis",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
             "popupDisplayChildren": "False",
@@ -144,9 +144,9 @@
             "link": "",
             "minScale": 1,
             "maxScale": 1000000000000,
-            "toggled": "False",
-            "popup": "False",
-            "popupSource": "auto",
+            "toggled": "True",
+            "popup": "True",
+            "popupSource": "qgis",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
             "popupDisplayChildren": "False",
@@ -178,9 +178,9 @@
             "link": "",
             "minScale": 1,
             "maxScale": 1000000000000,
-            "toggled": "False",
-            "popup": "False",
-            "popupSource": "auto",
+            "toggled": "True",
+            "popup": "True",
+            "popupSource": "qgis",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
             "popupDisplayChildren": "False",
@@ -212,9 +212,9 @@
             "link": "",
             "minScale": 1,
             "maxScale": 1000000000000,
-            "toggled": "False",
-            "popup": "False",
-            "popupSource": "auto",
+            "toggled": "True",
+            "popup": "True",
+            "popupSource": "qgis",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
             "popupDisplayChildren": "False",
@@ -246,9 +246,9 @@
             "link": "",
             "minScale": 1,
             "maxScale": 1000000000000,
-            "toggled": "False",
-            "popup": "False",
-            "popupSource": "auto",
+            "toggled": "True",
+            "popup": "True",
+            "popupSource": "qgis",
             "popupTemplate": "",
             "popupMaxFeatures": 10,
             "popupDisplayChildren": "False",
@@ -328,7 +328,58 @@
         "layers": []
     },
     "locateByLayer": {},
-    "attributeLayers": {},
+    "attributeLayers": {
+        "Auto": {
+            "layerId": "viaggi_lizmap_64ff4c8b_02ba_42a9_9ed3_3a4ed93996c1",
+            "primaryKey": "id",
+            "hiddenFields": "id,school_id",
+            "pivot": "False",
+            "hideAsChild": "False",
+            "hideLayer": "False",
+            "custom_config": "True",
+            "order": 0
+        },
+        "Bicicletta": {
+            "layerId": "Percorso_537bdde0_dd27_4221_853b_31a268273b77",
+            "primaryKey": "id",
+            "hiddenFields": "id,school_id",
+            "pivot": "False",
+            "hideAsChild": "False",
+            "hideLayer": "False",
+            "custom_config": "True",
+            "order": 1
+        },
+        "Bus Comunale": {
+            "layerId": "Percorso_9048b3b0_2bf6_4b06_ad77_8c189a1eaf9e",
+            "primaryKey": "id",
+            "hiddenFields": "id,school_id",
+            "pivot": "False",
+            "hideAsChild": "False",
+            "hideLayer": "False",
+            "custom_config": "True",
+            "order": 2
+        },
+        "Piedi": {
+            "layerId": "Percorso_79e26d45_1524_4d48_a1c5_3e32c1de52ac",
+            "primaryKey": "id",
+            "hiddenFields": "id,school_id",
+            "pivot": "False",
+            "hideAsChild": "False",
+            "hideLayer": "False",
+            "custom_config": "True",
+            "order": 3
+        },
+        "Scuola": {
+            "layerId": "scuole_lizmap_a5b53ba0_5bcf_4771_97cc_f4cb9b602141",
+            "primaryKey": "id",
+            "hiddenFields": "id,scuola_id",
+            "pivot": "False",
+            "hideAsChild": "False",
+            "hideLayer": "False",
+            "custom_config": "False",
+            "order": 4
+        }
+    },
     "tooltipLayers": {},
     "editionLayers": {},
     "loginFilteredLayers": {},
