--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "spatie/browsershot": "^3.58",
         "spatie/laravel-collection-macros": "^7.12",
         "spatie/laravel-permission": "^5.9",
+        "staudenmeir/eloquent-has-many-deep": "^1.7",
         "wire-elements/modal": "^1.0"
     },
     "require-dev": {
