--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laraveldaily/laravel-charts": "^0.2.3",
         "livewire/livewire": "^2.11",
         "maatwebsite/excel": "^3.1",
+        "matt-daneshvar/laravel-survey": "^0.4.0",
         "phayes/geophp": "^1.2",
         "rappasoft/laravel-livewire-tables": "^2.13",
         "spatie/browsershot": "^3.58",
