--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.3.0"
+        "@fortawesome/fontawesome-free": "^6.3.0",
+        "@ryangjchandler/alpine-clipboard": "^2.3.0"
     }
 }
