--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "livewire/livewire": "^2.11",
         "maatwebsite/excel": "^3.1",
         "matt-daneshvar/laravel-survey": "^0.4.0",
+        "opcodesio/log-viewer": "^3.8",
         "phayes/geophp": "^1.2",
         "rappasoft/laravel-livewire-tables": "^2.13",
         "spatie/browsershot": "^3.58",
