--- a/resources/lizmap/qgis/provinciale/provinciale.qgs.cfg
+++ b/resources/lizmap/qgis/provinciale/provinciale.qgs.cfg
@@ -1,16 +1,16 @@
 {
     "metadata": {
         "qgis_desktop_version": 32801,
-        "lizmap_plugin_version_str": "4.2.7",
-        "lizmap_plugin_version": 40207,
+        "lizmap_plugin_version_str": "4.3.11",
+        "lizmap_plugin_version": 40311,
         "lizmap_web_client_target_version": 30600,
         "lizmap_web_client_target_status": "Stable",
-        "instance_target_url": "http://10.0.16.23:8000/",
+        "instance_target_url": "https://mobilitiamoci.brainfarm.eu:8000/",
         "instance_target_repository": "provinciale"
     },
     "warnings": {},
     "debug": {
-        "total_time": 3.351
+        "total_time": 2.2119999999999993
     },
     "options": {
         "projection": {
@@ -65,14 +65,14 @@
             "type": "layer",
             "geometryType": "point",
             "extent": [
-                527110.2674806761,
+                523245.6667143958,
                 4949262.645639955,
-                575363.2869941067,
-                4993426.025299294
+                578019.9268551687,
+                4995217.2933984
             ],
             "crs": "EPSG:32632",
             "title": "Studente",
-            "abstract": "<p>testtttttt</p>",
+            "abstract": "",
             "link": "",
             "minScale": 1,
             "maxScale": 1000000000000,
@@ -133,10 +133,10 @@
             "type": "layer",
             "geometryType": "line",
             "extent": [
-                546300.1272999998,
-                4982093.655145671,
-                570066.9552999997,
-                4991872.26184783
+                1.7976931348623157e+308,
+                1.7976931348623157e+308,
+                -1.7976931348623157e+308,
+                -1.7976931348623157e+308
             ],
             "crs": "EPSG:32632",
             "title": "Auto",
@@ -167,10 +167,10 @@
             "type": "layer",
             "geometryType": "line",
             "extent": [
-                548497.7737999996,
-                4982093.655145671,
-                570066.9552999997,
-                4989853.635347397
+                1.7976931348623157e+308,
+                1.7976931348623157e+308,
+                -1.7976931348623157e+308,
+                -1.7976931348623157e+308
             ],
             "crs": "EPSG:32632",
             "title": "Bicicletta",
@@ -201,10 +201,10 @@
             "type": "layer",
             "geometryType": "line",
             "extent": [
-                550688.2016043968,
-                4968839.442532265,
-                556319.7651543709,
-                4989553.98908338
+                1.7976931348623157e+308,
+                1.7976931348623157e+308,
+                -1.7976931348623157e+308,
+                -1.7976931348623157e+308
             ],
             "crs": "EPSG:32632",
             "title": "Piedi",
@@ -235,10 +235,10 @@
             "type": "layer",
             "geometryType": "line",
             "extent": [
-                547050.1485472092,
-                4967184.330103489,
-                557282.7402450192,
-                4989711.812658156
+                1.7976931348623157e+308,
+                1.7976931348623157e+308,
+                -1.7976931348623157e+308,
+                -1.7976931348623157e+308
             ],
             "crs": "EPSG:32632",
             "title": "Bus Comunale",
@@ -376,7 +376,7 @@
             "pivot": "False",
             "hideAsChild": "False",
             "hideLayer": "False",
-            "custom_config": "False",
+            "custom_config": "True",
             "order": 4
         }
     },
