feat: pedibus - avanzamento

--- a/resources/lizmap/qgis/provinciale/provinciale.qgs.cfg
+++ b/resources/lizmap/qgis/provinciale/provinciale.qgs.cfg
@@ -10,7 +10,7 @@
     },
     "warnings": {},
     "debug": {
-        "total_time": 2.2119999999999993
+        "total_time": 3.9729999999999994
     },
     "options": {
         "projection": {
@@ -49,6 +49,7 @@
         "pointTolerance": 25,
         "lineTolerance": 10,
         "polygonTolerance": 5,
+        "hideHeader": "True",
         "tmTimeFrameSize": 10,
         "tmTimeFrameType": "seconds",
         "tmAnimationFrameLength": 1000,
