--- a/resources/lizmap/qgis/provinciale/provinciale.qgs.cfg
+++ b/resources/lizmap/qgis/provinciale/provinciale.qgs.cfg
@@ -10,7 +10,7 @@
     },
     "warnings": {},
     "debug": {
-        "total_time": 2.2119999999999993
+        "total_time": 3.4979999999999998
     },
     "options": {
         "projection": {
@@ -49,6 +49,7 @@
         "pointTolerance": 25,
         "lineTolerance": 10,
         "polygonTolerance": 5,
+        "hideHeader": "True",
         "tmTimeFrameSize": 10,
         "tmTimeFrameType": "seconds",
         "tmAnimationFrameLength": 1000,
@@ -59,40 +60,6 @@
         "dataviz_drag_drop": []
     },
     "layers": {
-        "Studente": {
-            "id": "anon_studenti_lizmap_c2509e73_50d3_4a92_81bc_122d5b635ee3",
-            "name": "Studente",
-            "type": "layer",
-            "geometryType": "point",
-            "extent": [
-                523245.6667143958,
-                4949262.645639955,
-                578019.9268551687,
-                4995217.2933984
-            ],
-            "crs": "EPSG:32632",
-            "title": "Studente",
-            "abstract": "",
-            "link": "",
-            "minScale": 1,
-            "maxScale": 1000000000000,
-            "toggled": "True",
-            "popup": "True",
-            "popupSource": "qgis",
-            "popupTemplate": "",
-            "popupMaxFeatures": 10,
-            "popupDisplayChildren": "False",
-            "popup_allow_download": true,
-            "legend_image_option": "hide_at_startup",
-            "groupAsLayer": "False",
-            "baseLayer": "False",
-            "displayInLegend": "True",
-            "group_visibility": [],
-            "singleTile": "True",
-            "imageFormat": "image/png",
-            "cached": "False",
-            "clientCacheExpiration": 300
-        },
         "Scuola": {
             "id": "scuole_lizmap_a5b53ba0_5bcf_4771_97cc_f4cb9b602141",
             "name": "Scuola",
@@ -127,16 +94,50 @@
             "cached": "False",
             "clientCacheExpiration": 300
         },
+        "Studente": {
+            "id": "anon_studenti_lizmap_c2509e73_50d3_4a92_81bc_122d5b635ee3",
+            "name": "Studente",
+            "type": "layer",
+            "geometryType": "point",
+            "extent": [
+                523245.6667143958,
+                4949262.645639955,
+                578019.9268551687,
+                4995217.2933984
+            ],
+            "crs": "EPSG:32632",
+            "title": "Studente",
+            "abstract": "",
+            "link": "",
+            "minScale": 1,
+            "maxScale": 1000000000000,
+            "toggled": "True",
+            "popup": "True",
+            "popupSource": "qgis",
+            "popupTemplate": "",
+            "popupMaxFeatures": 10,
+            "popupDisplayChildren": "False",
+            "popup_allow_download": true,
+            "legend_image_option": "hide_at_startup",
+            "groupAsLayer": "False",
+            "baseLayer": "False",
+            "displayInLegend": "True",
+            "group_visibility": [],
+            "singleTile": "True",
+            "imageFormat": "image/png",
+            "cached": "False",
+            "clientCacheExpiration": 300
+        },
         "Auto": {
             "id": "viaggi_lizmap_64ff4c8b_02ba_42a9_9ed3_3a4ed93996c1",
             "name": "Auto",
             "type": "layer",
             "geometryType": "line",
             "extent": [
-                1.7976931348623157e+308,
-                1.7976931348623157e+308,
-                -1.7976931348623157e+308,
-                -1.7976931348623157e+308
+                546300.1272999998,
+                4982093.655145671,
+                570066.9552999997,
+                4991872.26184783
             ],
             "crs": "EPSG:32632",
             "title": "Auto",
@@ -167,10 +168,10 @@
             "type": "layer",
             "geometryType": "line",
             "extent": [
-                1.7976931348623157e+308,
-                1.7976931348623157e+308,
-                -1.7976931348623157e+308,
-                -1.7976931348623157e+308
+                548497.7737999996,
+                4982093.655145671,
+                570066.9552999997,
+                4989853.635347397
             ],
             "crs": "EPSG:32632",
             "title": "Bicicletta",
@@ -201,10 +202,10 @@
             "type": "layer",
             "geometryType": "line",
             "extent": [
-                1.7976931348623157e+308,
-                1.7976931348623157e+308,
-                -1.7976931348623157e+308,
-                -1.7976931348623157e+308
+                546333.7451999998,
+                4968839.442532265,
+                570066.9552999997,
+                4990128.605747466
             ],
             "crs": "EPSG:32632",
             "title": "Piedi",
@@ -235,10 +236,10 @@
             "type": "layer",
             "geometryType": "line",
             "extent": [
-                1.7976931348623157e+308,
-                1.7976931348623157e+308,
-                -1.7976931348623157e+308,
-                -1.7976931348623157e+308
+                531915.6218784179,
+                4963730.2923708735,
+                571570.1457548129,
+                4989818.399400257
             ],
             "crs": "EPSG:32632",
             "title": "Bus Comunale",
@@ -376,7 +377,7 @@
             "pivot": "False",
             "hideAsChild": "False",
             "hideLayer": "False",
-            "custom_config": "True",
+            "custom_config": "False",
             "order": 4
         }
     },
