--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "arielmejiadev/larapex-charts": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.2",
         "clickbar/laravel-magellan": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
         "jantinnerezo/livewire-alert": "^2.2",
