--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "phayes/geophp": "^1.2",
         "proj4php/proj4php": "^2.0",
         "rappasoft/laravel-livewire-tables": "^2.13",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/browsershot": "^3.58",
         "spatie/laravel-collection-macros": "^7.12",
         "spatie/laravel-permission": "^5.9",
@@ -35,7 +36,6 @@
         "josezenem/laravel-make-migration-pivot": "^1.0",
         "laravel-lang/attributes": "^2.1",
         "laravel-lang/lang": "^12.16",
-        "laravel-lang/publisher": "^14.6",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
