--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "phayes/geophp": "^1.2",
         "proj4php/proj4php": "^2.0",
         "rappasoft/laravel-livewire-tables": "^2.13",
-        "simplesoftwareio/simple-qrcode": "^4.2",
+        "simplesoftwareio/simple-qrcode": "~4",
         "spatie/browsershot": "^3.58",
         "spatie/laravel-collection-macros": "^7.12",
         "spatie/laravel-permission": "^5.9",
