--- a/resources/lizmap/qgis/scolastico/scolastico.qgs.cfg
+++ b/resources/lizmap/qgis/scolastico/scolastico.qgs.cfg
@@ -10,7 +10,7 @@
     },
     "warnings": {},
     "debug": {
-        "total_time": 3.4569999999999994
+        "total_time": 3.406
     },
     "options": {
         "projection": {
